kubernetes/k3s-prod-a/sonarr/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: torrenting
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.l.47fc5c.com`)
      kind: Rule
      services:
        - name: sonarr
          kind: Service
          port: 8989
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
